--- a/app/src/main/res/layout/fragment_e_k_t_p_login_pass_login.xml
+++ b/app/src/main/res/layout/fragment_e_k_t_p_login_pass_login.xml
@@ -115,11 +115,11 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/_43sdp"
                     android:layout_marginEnd="@dimen/_43sdp"
-                    android:layout_marginTop="5dp"
+                    android:layout_marginTop="@dimen/_8sdp"
                     android:background="@drawable/rounded_rectangle_gray"
                     android:hint="@string/required_field_hint"
                     android:inputType="textPassword"
-                    android:padding="@dimen/_6sdp"
+                    android:padding="@dimen/_10sdp"
                     android:theme="@style/hint_edit_text"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -143,6 +143,7 @@
                     android:layout_marginTop="@dimen/_16sdp"
                     android:layout_marginEnd="@dimen/_43sdp"
                     android:text="@string/login_frgt_pass"
+                    android:padding="@dimen/_10sdp"
                     android:clickable="true"
                     android:theme="@style/text_button_2"
                     app:layout_constraintEnd_toEndOf="parent"
