--- a/app/src/main/res/layout/fragment_receive_mtcn_acount_succes.xml
+++ b/app/src/main/res/layout/fragment_receive_mtcn_acount_succes.xml
@@ -48,13 +48,15 @@
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:layout_gravity="center">
 
                 <ImageButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/_40sdp"
-                    android:layout_marginEnd="@dimen/_50sdp"
+                    android:layout_marginTop="@dimen/_10sdp"
+                    android:layout_marginEnd="@dimen/_20sdp"
+                    android:padding="@dimen/_10sdp"
                     android:background="@drawable/ic_share_button"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"/>
@@ -64,7 +66,7 @@
                     android:layout_width="@dimen/_228sdp"
                     android:layout_height="@dimen/_211sdp"
                     android:background="@drawable/ic_mtcn_recived_succes"
-                    android:layout_marginTop="@dimen/_90sdp"
+
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"/>
