--- a/app/src/main/res/layout/fragment_ektp_receive_mtcn_details.xml
+++ b/app/src/main/res/layout/fragment_ektp_receive_mtcn_details.xml
@@ -282,12 +282,14 @@
                     android:theme="@style/bottom_button"
                     android:textColor="@color/elektra_gray"
                     android:backgroundTint="@color/elektra_yellow"
-                    android:background="@color/elektra_yellow"
+                    android:background="@drawable/rounded_rectangle_yellow"
                     android:layout_marginStart="@dimen/_43sdp"
                     android:layout_marginEnd="@dimen/_43sdp"
                     android:layout_marginTop="@dimen/_22sdp"
+                    android:layout_marginBottom="@dimen/_22sdp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/depositToButton"/>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
