Se corrige activities duplicados en Manifest por merge

--- a/app/src/main/res/layout/fragment_receive_mtcn_acount_succes.xml
+++ b/app/src/main/res/layout/fragment_receive_mtcn_acount_succes.xml
@@ -57,7 +57,7 @@
                     android:layout_marginTop="@dimen/_10sdp"
                     android:layout_marginEnd="@dimen/_20sdp"
                     android:padding="@dimen/_10sdp"
-                    android:background="@drawable/ic_share_button"
+                    android:background="@drawable/ic_share_icon"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"/>
 
