--- a/app/src/main/res/layout/fragment_ektp_create_account_create_pass.xml
+++ b/app/src/main/res/layout/fragment_ektp_create_account_create_pass.xml
@@ -108,7 +108,7 @@
                     android:background="@drawable/rounded_rectangle_gray"
                     android:hint="@string/required_field_hint"
                     android:inputType="textPassword"
-                    android:padding="10sp"
+                    android:padding="@dimen/_10sdp"
                     android:theme="@style/hint_edit_text"
                     android:imeOptions="actionNext"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -118,8 +118,8 @@
                 <ImageButton
                     android:id="@+id/showPassButton1"
                     android:layout_width="@dimen/_28sdp"
-                    android:layout_height="@dimen/_26sdp"
-                    android:background="@drawable/ic_eye_pass_icon"
+                    android:layout_height="@dimen/_19sdp"
+                    android:background="@drawable/ic_show_pass"
                     android:layout_marginEnd="@dimen/_8sdp"
                     android:padding="@dimen/_20sdp"
                     app:layout_constraintBottom_toBottomOf="@+id/insertPass"
@@ -147,7 +147,7 @@
                     android:background="@drawable/rounded_rectangle_gray"
                     android:hint="@string/required_field_hint"
                     android:inputType="textPassword"
-                    android:padding="10sp"
+                    android:padding="@dimen/_10sdp"
                     android:theme="@style/hint_edit_text"
                     android:imeOptions="actionDone"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -157,8 +157,8 @@
                 <ImageButton
                     android:id="@+id/showPassButton2"
                     android:layout_width="@dimen/_28sdp"
-                    android:layout_height="@dimen/_26sdp"
-                    android:background="@drawable/ic_eye_pass_icon"
+                    android:layout_height="@dimen/_19sdp"
+                    android:background="@drawable/ic_show_pass"
                     android:padding="@dimen/_20sdp"
                     android:layout_marginEnd="@dimen/_8sdp"
                     app:layout_constraintTop_toTopOf="@+id/insertConfirmPass"
