--- a/app/src/main/res/layout/fragment_ekpt_create_account_register_form.xml
+++ b/app/src/main/res/layout/fragment_ekpt_create_account_register_form.xml
@@ -146,7 +146,7 @@
                     android:maxLength="50"
                     android:enabled="false"
                     android:theme="@style/hint_edit_text"
-                    android:padding="10sp"
+                    android:padding="@dimen/_10sdp"
                     app:layout_constraintTop_toBottomOf="@id/nameLabel"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"/>
@@ -170,7 +170,7 @@
                     android:layout_marginEnd="@dimen/_31sdp"
                     android:background="@color/elektra_white_gray"
                     android:maxLength="50"
-                    android:padding="10sp"
+                    android:padding="@dimen/_10sdp"
                     android:theme="@style/hint_edit_text"
                     android:enabled="false"
                     android:imeOptions="actionNext"
@@ -198,7 +198,7 @@
                     android:background="@color/elektra_white_gray"
                     android:maxLength="50"
                     android:theme="@style/hint_edit_text"
-                    android:padding="10sp"
+                    android:padding="@dimen/_10sdp"
                     android:enabled="false"
                     android:imeOptions="actionNext"
                     app:layout_constraintTop_toBottomOf="@id/maternalLastNameLabel"
@@ -224,7 +224,7 @@
                     android:layout_marginEnd="@dimen/_31sdp"
                     android:background="@color/elektra_white_gray"
                     android:theme="@style/hint_edit_text"
-                    android:padding="10sp"
+                    android:padding="@dimen/_10sdp"
                     android:maxLength="10"
                     android:enabled="false"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -328,7 +328,7 @@
                     android:background="@drawable/rounded_rectangle_gray"
                     android:hint="@string/required_field_hint"
                     android:inputType="number"
-                    android:padding="10sp"
+                    android:padding="@dimen/_10sdp"
                     android:theme="@style/hint_edit_text"
                     android:imeOptions="actionNext"
                     android:maxLength="5"
@@ -409,7 +409,7 @@
                     android:maxLength="50"
                     android:hint="@string/required_field_hint"
                     android:inputType="textCapSentences"
-                    android:padding="10sp"
+                    android:padding="@dimen/_10sdp"
                     android:theme="@style/hint_edit_text"
                     android:imeOptions="actionNext"
                     app:layout_constraintTop_toBottomOf="@id/streetLabel"
@@ -477,7 +477,7 @@
                         android:imeOptions="actionNext"
                         android:maxLength="50"
                         android:inputType="textNoSuggestions"
-                        android:padding="10sp"
+                        android:padding="@dimen/_10sdp"
                         android:theme="@style/hint_edit_text" />
                     <Space
                         android:layout_width="@dimen/_18sdp"
@@ -493,7 +493,7 @@
                         android:hint="@string/optional_field_hint"
                         android:imeOptions="actionDone"
                         android:inputType="textNoSuggestions"
-                        android:padding="10sp"
+                        android:padding="@dimen/_10sdp"
                         android:theme="@style/hint_edit_text" />
                 </LinearLayout>
 
