--- a/app/src/main/res/layout/fragment_ektp_home_main.xml
+++ b/app/src/main/res/layout/fragment_ektp_home_main.xml
@@ -143,8 +143,8 @@
                 <androidx.cardview.widget.CardView
                     android:id="@+id/balanceCardView"
                     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-                    android:layout_width="294dp"
-                    android:layout_height="@dimen/_137sdp"
+                    android:layout_width="@dimen/_300sdp"
+                    android:layout_height="@dimen/_150sdp"
                     android:layout_marginTop="@dimen/_54sdp"
                     android:layout_marginStart="@dimen/_58sdp"
                     android:layout_marginEnd="@dimen/_58sdp"
